--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+/* html, body {
   height: 100vh;
   overflow: hidden;
 }
@@ -33,4 +33,14 @@ html, body {
   right: 0;
   left: 0;
   z-index: 100;
+} */
+
+.ur-plan:hover {
+  background: rgba(229, 223, 223, 0.70);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s ease-in-out;
+}
+
+.drop-shadow-m {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
