--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,3 +99,83 @@
 .project-info-part p {
   letter-spacing: 3px;
 }
+
+.head-dropdown {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.head-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  /* padding: 12px 16px; */
+  z-index: 1;
+}
+
+.head-dropdown:hover .head-dropdown-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.head-dropdown-content a {
+  padding: 8px 16px;
+}
+
+.slick-slide {
+  scale: 0.8 !important;
+  -webkit-transition: all 0.3s ease !important;
+  -moz-transition: all 0.3s ease !important;
+  -ms-transition: all 0.3s ease !important;
+  -o-transition: all 0.3s ease !important;
+  transition: all 0.3s ease !important;
+}
+
+.slick-slide.slick-active {
+  scale: 1 !important;
+  -webkit-transition: all 0.3s ease !important;
+  -moz-transition: all 0.3s ease !important;
+  -ms-transition: all 0.3s ease !important;
+  -o-transition: all 0.3s ease !important;
+  transition: all 0.3s ease !important;
+}
+
+.dp-section-1,
+.dp-section-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.dp-section-1::before {
+  position: absolute;
+  left: 0;
+  bottom: -10%;
+  content: url("/dp-before.png");
+  z-index: -1;
+}
+
+.dp-section-1::after {
+  position: absolute;
+  right: 5%;
+  top: 10%;
+  content: url("/dp-after.png");
+  z-index: -1;
+}
+
+.dp-section-3::before {
+  position: absolute;
+  left: -330px;
+  bottom: -50px;
+  transform: scale(0.7);
+  content: url("/dp-3-before.png");
+  z-index: -1;
+}
