--- a/styles/globals.css
+++ b/styles/globals.css
@@ -179,3 +179,27 @@
   content: url("/dp-3-before.png");
   z-index: -1;
 }
+
+.i-s1 {
+  position: relative;
+  /* height: 100vh; */
+}
+
+.i-s1::after {
+  position: absolute;
+  content: url("/111@4x_1.png");
+  /* z-index: 1; */
+  scale: 0.8;
+  top: -20px;
+  right: 5%;
+}
+
+.box-client {
+  width: 170px;
+  height: 130px;
+  background: #FCFCFC;
+  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25) inset, 4px 0px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25), -4px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
