--- a/styles/globals.css
+++ b/styles/globals.css
@@ -203,3 +203,51 @@
   justify-content: center;
   align-items: center;
 }
+
+.select-make-app {
+  user-select: none;
+}
+
+.select-make-app:hover {
+  cursor: pointer;
+  background: #618E87;
+}
+
+.info-sldc {
+  position: absolute;
+  top: 31%;
+  left: 50%;
+  transform: translate(-50%);
+  width: 230px;
+  height: 230px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.animate-spin-cus {
+  animation: anime-ss 35s linear infinite;
+}
+
+.bg-wave {
+  background-image: url("/bg_wave_1.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+  top: -150px;
+}
+
+@keyframes anime-ss {
+  from {
+    rotate: 0;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
