--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,9 +85,8 @@
 .head-dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
   /* padding: 12px 16px; */
   z-index: 1;
 }
@@ -170,7 +169,7 @@
 }
 
 .box-client {
-  width: 170px;
+  width: 130px;
   height: 130px;
   background: #FCFCFC;
   box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25) inset, 4px 0px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25), -4px 0px 4px 0px rgba(0, 0, 0, 0.25);
@@ -266,11 +265,13 @@
 @media only screen and (max-width: 1024px) {
   .bg-wave {
     background-image: unset;
+    top: 0;
   }
   .info-sldc {
     width: 160px;
     height: 160px;
     font-size: 12px;
+    top: 194px;
   }
   .dp-section-3 {
     justify-content: start;
